# finatr

./: package.json
.github/workflows/: release-tauri-app.yml
src-tauri/: Cargo.toml
