[package]
name = "finatr"
version = "0.1.0"
description = "An OSS finance app"
authors = [ "Jacob Bolda" ]
license = ""
repository = ""
default-run = "finatr"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.7", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "finatr"
path = "src/main.rs"
